--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,7 +3,15 @@ on: [push]
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        test-file:
+          - 1_day 11.js
+          - 1_day 13.js
+          - 1_day 23.js
+          - 1_day 28.js
+          - 1_day 8.js
     steps:
       - uses: actions/checkout@v2
       - run: npm install
-      - run: npx jest
+      - run: npx jest ${{ matrix['test-file'] }}
